--- a/Project.toml
+++ b/Project.toml
@@ -3,11 +3,9 @@ uuid = "463befc3-bf57-4ff5-887d-5b8e2621417b"
 authors = ["Adam <adamgoast360@outlook.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
+
 [compat]
+NNlib = "0.9.30"
 julia = "1.10"
-
-[extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-
-[targets]
-test = ["Test"]
