--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,18 @@ authors = ["Adam <adamgoast360@outlook.com> and contributors"]
 version = "1.0.0-DEV"
 
 [deps]
+DLProteinFormats = "df93d313-1126-4eb6-ac29-b325d5898587"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
+Onion = "fdebf6c2-71da-43a1-b539-c3bc3e09c5c6"
+RandomFeatureMaps = "780baa95-dd42-481b-93db-80fe3d88832c"
 
 [compat]
+DLProteinFormats = "0.1.4"
+Flux = "0.16.4"
+LinearAlgebra = "1.11.0"
 NNlib = "0.9.30"
+Onion = "0.1.2"
+RandomFeatureMaps = "0.2.2"
 julia = "1.10"
