--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "1.0.0-DEV"
 DLProteinFormats = "df93d313-1126-4eb6-ac29-b325d5898587"
 Einops = "e3ce28c8-8bfb-4704-8add-e3e7f14b55c9"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
 Onion = "fdebf6c2-71da-43a1-b539-c3bc3e09c5c6"
@@ -18,6 +19,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 DLProteinFormats = "0.1.4"
 Einops = "0.1.6"
 Flux = "0.16.4"
+JLD2 = "0.5.15"
 LinearAlgebra = "1.11.0"
 NNlib = "0.9.30"
 Onion = "0.1.2"
