--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
 Onion = "fdebf6c2-71da-43a1-b539-c3bc3e09c5c6"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RandomFeatureMaps = "780baa95-dd42-481b-93db-80fe3d88832c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
@@ -23,6 +24,7 @@ JLD2 = "0.5.15"
 LinearAlgebra = "1.11.0"
 NNlib = "0.9.30"
 Onion = "0.1.2"
+Plots = "1.40.16"
 Random = "1.11.0"
 RandomFeatureMaps = "0.2.2"
 Statistics = "1.11.1"
