--- a/Project.toml
+++ b/Project.toml
@@ -4,11 +4,11 @@ authors = ["Adam <adamgoast360@outlook.com> and contributors"]
 version = "1.0.0-DEV"
 
 [deps]
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 ConcreteStructs = "2569d6c7-a4a2-43d3-a901-331e8e4be471"
 Einops = "e3ce28c8-8bfb-4704-8add-e3e7f14b55c9"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Manifolds = "1cead3c2-87b3-11e9-0ccd-23c62b72b94e"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
 Onion = "fdebf6c2-71da-43a1-b539-c3bc3e09c5c6"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -16,11 +16,11 @@ RandomFeatureMaps = "780baa95-dd42-481b-93db-80fe3d88832c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
+ChainRulesCore = "1.25.2"
 ConcreteStructs = "0.2.3"
 Einops = "0.1.6"
 Flux = "0.16.4"
 LinearAlgebra = "1.11.0"
-Manifolds = "0.10.22"
 NNlib = "0.9.30"
 Onion = "0.1.4"
 Random = "1.11.0"
