--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MolecularGraph = "6c89ec66-9cd8-5372-9f91-fabc50dd27fd"
 MsgPack = "99f44e22-a591-53d1-9472-aa23ef4bd671"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
 Onion = "fdebf6c2-71da-43a1-b539-c3bc3e09c5c6"
@@ -29,7 +30,6 @@ Flux = "0.16.4"
 GLMakie = "0.13.3"
 JLD2 = "0.5.15"
 LinearAlgebra = "1.11.0"
-MsgPack = "1.2.1"
 NNlib = "0.9.30"
 Onion = "0.1.2"
 Plots = "1.40.16"
