--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RandomFeatureMaps = "780baa95-dd42-481b-93db-80fe3d88832c"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Tar = "a4e569a6-e804-4fa4-b0f3-eef7a1d5b13e"
 
@@ -30,12 +31,14 @@ Flux = "0.16.4"
 GLMakie = "0.13.3"
 JLD2 = "0.5.15"
 LinearAlgebra = "1.11.0"
+MolecularGraph = "0.20.2"
 NNlib = "0.9.30"
 Onion = "0.1.2"
 Plots = "1.40.16"
 Printf = "1.11.0"
 Random = "1.11.0"
 RandomFeatureMaps = "0.2.2"
+StaticArrays = "1.9.14"
 Statistics = "1.11.1"
 Tar = "1.10.0"
 julia = "1.10"
